--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "my-portfolio",
+  "name": "portfolio_v1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@next/third-parties": "^15.1.3",
-    "dotenv": "^16.4.7",
-    "lucide-react": "^0.469.0",
-    "next": "15.1.3",
-    "pg": "^8.13.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@next/third-parties": "^14.1.0",
+    "lucide-react": "^0.323.0",
+    "next": "14.1.0",
+    "pg": "^8.11.3",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/pg": "^8.11.10",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
+    "@types/pg": "^8.11.0",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
+
