--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "lint": "next lint"
   },
   "dependencies": {
     "@next/third-parties": "^14.1.0",
     "lucide-react": "^0.323.0",
-    "next": "14.1.0",
+    "next": "^14.2.22",
     "pg": "^8.11.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -30,4 +30,3 @@
     "typescript": "^5"
   }
 }
-
